Details
-
Bug
-
Resolution: Done
-
P4: Low
-
5.1.0
-
None
-
Qt 5.1.0 MinGW 4.8 OpenGL
Microsoft Windows XP Professional x64 Edition SP2
-
1cd8ae21155bf131e2a52d6b22bd4d93f60c80a7
Description
Calling QFileDialog::getOpenFileName() on Windows XP fails as it tries to use the CLSID-based IFileDialog interfaces available in Vista and later. It falls back to the non-native dialog with the following:
CoCreateInstance failed (The requested lookup key was not found in any active activation context.)
https://codereview.qt-project.org/#change,38109 added the support required for native Windows XP file dialogs (by passing -platform windows:dialogs=native as command line arguments) but it is not enabled by default when using Windows XP x64 Edition because the detection code does not detect Windows XP x64 Edition (NT 5.2) as XP (5.1). This would also affect Windows Server 2003.
It can be easily reproduced when opening a project in Qt Creator bundled with Qt 5.1.0 Windows installer which shows the non-native dialog.
This is a regression from Qt 4.
Attachments
Issue Links
- relates to
-
QTBUG-27621 Native FileDialog doesn't work under Windows XP.
- Closed