Show native file dialog on Windows XP Professional x64 Edition.

It claims to be WV_5_2 (WV_2003).

Task-number: QTBUG-32217

Change-Id: I0c277410acc9ac29710a3eee63bec9ced42e2767
Reviewed-by: Jonathan Liu <net147@gmail.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>